--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomerDialogActivity"></activity>
+        <activity android:name=".PopUpActivity"></activity>
+        <activity android:name=".CustomerDialogActivity" />
         <activity android:name=".ProgressBarActivity" />
         <activity android:name=".AlertDialogActivity" />
         <activity android:name=".ToastActivity" />
