--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".jump.BActivity">
+        <activity android:name=".fragment.ContainerActivity"></activity>
+        <activity
+            android:name=".jump.BActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="com.ljy.test.BActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
-
             </intent-filter>
         </activity>
-        <activity android:name=".jump.AActivity" />
+        <activity
+            android:name=".jump.AActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".PopUpActivity" />
         <activity android:name=".CustomerDialogActivity" />
         <activity android:name=".ProgressBarActivity" />
