fragment切换 返回栈 传值

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".fragment.ContainerActivity"></activity>
         <activity
-            android:name=".jump.BActivity"
-            android:launchMode="singleTop">
+            android:name=".jump.BActivity">
             <intent-filter>
                 <action android:name="com.ljy.test.BActivity" />
 
@@ -23,8 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".jump.AActivity"
-            android:launchMode="singleTop" />
+            android:name=".jump.AActivity" />
         <activity android:name=".PopUpActivity" />
         <activity android:name=".CustomerDialogActivity" />
         <activity android:name=".ProgressBarActivity" />
