--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HandlerActivity"></activity>
+        <activity android:name=".datastorage.SharedPreferencesActivity"></activity>
+        <activity android:name=".datastorage.DataStorageActivity" />
+        <activity android:name=".HandlerActivity" />
         <activity android:name=".EventActivity" />
         <activity android:name=".fragment.ContainerActivity" />
         <activity android:name=".jump.BActivity">
