--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 }
