--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,19 @@
     package="com.example.myapplication">
     <!-- 加载网络图片必须要有权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".imageload.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".imageload.UniversalImgLoaderActivity"></activity>
         <activity android:name=".datastorage.FileActivity" />
-        <activity android:name=".datastorage.SharedPreferencesActivity"></activity>
+        <activity android:name=".datastorage.SharedPreferencesActivity" />
         <activity android:name=".datastorage.DataStorageActivity" />
         <activity android:name=".HandlerActivity" />
         <activity android:name=".EventActivity" />
