--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".okhttp.OKHttpActivity"></activity>
+        <activity android:name=".materialDesign.MaterialDesignActivity"></activity>
+        <activity android:name=".okhttp.OKHttpActivity" />
         <activity android:name=".eventbus.MainFgActivity" />
         <activity android:name=".eventbus.EventBusBActivity" />
         <activity android:name=".eventbus.EventBusAActivity" />
