--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation("com.squareup.okhttp3:okhttp:4.0.1")
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 }
