--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation("com.squareup.okhttp3:okhttp:4.0.1")
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
 }
