--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".materialDesign.FruitDetailActivity"></activity>
+        <activity android:name=".materialDesign.FruitDetailActivity" android:theme="@style/FruitActivityTheme"/>
         <activity android:name=".materialDesign.MaterialDesignActivity" />
         <activity android:name=".okhttp.OKHttpActivity" />
         <activity android:name=".eventbus.MainFgActivity" />
