--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".notification.NotiContenActivity" />
         <activity android:name=".notification.NotificationActivity" />
         <activity android:name=".service.StartServiceActivity" />
-
+        <service android:name=".service.MyIntentService" />
         <service
             android:name=".service.MyService"
             android:enabled="true"
